--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "dotenv": "^16.4.5",
     "gsap": "^3.12.5",
     "next": "14.1.3",
     "react": "^18",
