--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.549.0",
+    "@aws-sdk/lib-dynamodb": "^3.549.0",
+    "@aws-sdk/util-dynamodb": "^3.549.0",
     "@gsap/react": "^2.1.0",
+    "aws-sdk": "^2.1594.0",
     "dotenv": "^16.4.5",
     "gsap": "^3.12.5",
     "next": "14.1.3",
