--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@aws-sdk/lib-dynamodb": "^3.549.0",
     "@aws-sdk/util-dynamodb": "^3.549.0",
     "@gsap/react": "^2.1.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/react-modal": "^3.16.3",
     "aws-sdk": "^2.1594.0",
     "dotenv": "^16.4.5",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
